fix phone number being too big on contact page , prevent from wrapping to next line

--- a/css/custom.css
+++ b/css/custom.css
@@ -23,7 +23,7 @@ body {
 }
 
 .phone-number-contact{
-  font-size: 4vw;
+  font-size: 3vw;
   color: white !important;
   text-decoration: none;
   
